--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "dependencies": {
     "cyclop-graph": "^0.1.13",
     "next": "^2.3.0-alpha1",
-    "next-redux-wrapper": "^1.1.2",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
